--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "dev:temporal-cli": "vite dev --mode temporal-server",
     "dev:docker": ". ./.env && VITE_API=http://localhost:8080 vite dev --mode docker",
     "build:local": "vite build",
-    "build:docker": "VITE_API=http://localhost:8080 vite build",
-    "build:server": "VITE_API= BUILD_PATH=server/ui/assets/local vite build",
+    "build:docker": "cross-env VITE_API=http://localhost:8080 vite build",
+    "build:server": "cross-env VITE_API= BUILD_PATH=server/ui/assets/local vite build",
     "temporal-server": "esno scripts/start-temporal-server.ts --codecEndpoint http://127.0.0.1:8888",
     "codec-server": "esno ./scripts/start-codec-server.ts --port 8888",
     "serve:playwright:e2e": "vite build && vite preview --mode test.e2e",
@@ -164,6 +164,7 @@
     "c8": "^7.12.0",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "cssnano": "^5.1.14",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
